--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,18 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <!-- <div>Saludos desde Desampakistan</div>
-        <p th:text="${Mensaje}"></p> 
-        <br/>
-        <br/>
-        <br/>
-        <p>Nombre: <span th:text="${objetoCliente.nombre}"></span></p>
-        <p>Apellidos: <span th:text="${objetoCliente.apellidos}"></span></p>
-        <p>Correo: <span th:text="${objetoCliente.correo}"></span></p>
-        <p>Telefono: <span th:text="${objetoCliente.telefono}"></span></p> -->  
-
-
-        <h1>Lista de clientes</h1>
+        <header th:replace="layout/plantilla :: header" />
+        <h2>Lista de clientes</h2>
+        <a th:href="@{/nuevoCliente}">Nuevo cliente</a>
+        <br  />
+        <br  />
+        <br  />
         <div th:if="${clientes != null and !clientes.empty}">
         <table border="1">
             <thead>
@@ -25,6 +19,7 @@
             <th>Apellidos</th>
             <th>Correo</th>
             <th>Telefono</th>
+            <th colspan="2">Acciones</th>
             </thead>    
             <tbody>
                 <tr th:each="item : ${clientes}">
@@ -32,6 +27,8 @@
                     <td th:text="${item.apellidos}"></td>
                     <td th:text="${item.correo}"></td>
                     <td th:text="${item.telefono}"></td>
+                    <td><a th:href="@{/modificarCliente/} + ${item.idCliente}">Modificar</a></td>
+                    <td><a th:href="@{/eliminarCliente/} + ${item.idCliente}">Eliminar</a></td>
                     
                 </tr>
             </tbody>
@@ -40,5 +37,6 @@
         <div th:if="${clientes == null or clientes.empty}">
             La Lista esta vacia.
         </div>
+        <footer th:replace="layout/plantilla :: footer" />
     </body>
 </html>
