--- a/src/main/resources/templates/modificarCliente.html
+++ b/src/main/resources/templates/modificarCliente.html
@@ -9,10 +9,10 @@
     <body>
         <header th:replace="layout/plantilla :: header" />
         <h2>Datos del cliente</h2>
-        <a th:href="@{/}">Regresar</a>
+        <a th:href="@{/cliente/listado}">Regresar</a>
         <br />
         <br />
-        <form th:action="@{/guardarCliente}"
+        <form th:action="@{/cliente/guardar}"
               method="POST"
               th:object="${cliente}">
             <input type="hidden" name="idCliente" th:field="*{idCliente}" />
