--- a/src/main/resources/templates/cliente/listado.html
+++ b/src/main/resources/templates/cliente/listado.html
@@ -12,6 +12,8 @@
             <a th:href="@{/cliente/nuevo}">Nuevo cliente</a>
             <br  />
             <br  />
+            <a th:href="@{/cliente/buscar}">Buscar Clientes</a>
+            <br  />
             <br  />
             <div th:if="${clientes != null and !clientes.empty}">
                 <table border="1">
