--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -11,19 +11,26 @@
                 <a th:href="@{/}" class="logo nav-link">TechShop</a>
                 <ul class="nav-menu">
                     <li class="nav-menu-item">
-                    <a class="nav-menu-link nav-link" th:href="{@/cliente/listado}"> Clientes </a>
+                    <a class="nav-menu-link nav-link" th:href="@{/cliente/listado}"
+                       th:text="#{plantilla.clientes}"> Clientes </a>
                     </li>
                     <li class="nav-menu-item">
-                    <a class="nav-menu-link nav-link" th:href="{@/categoria/listado}"> Categorias </a>
+                    <a class="nav-menu-link nav-link" th:href="@{/categoria/listado}"
+                       th:text="#{plantilla.categorias}"> Categorias </a>
                     </li>
                     <li class="nav-menu-item">
-                    <a class="nav-menu-link nav-link" th:href="{@/articulo/listado}"> Articulos </a>
+                    <a class="nav-menu-link nav-link" th:href="@{/articulo/listado}"
+                       th:text="#{plantilla.articulos}"> Articulos </a>
                     </li>
                 </ul>
             </nav>  
                     </header>
         <footer th:fragment="footer" clas="footer">
-            <p>&COPY; Derechos Reservados 2023</p>
+            <p>&COPY; Derechos Reservados 2023
+                <a th:href="@{/(lang=es)}">ES</a> |
+                <a th:href="@{/(lang=en)}">EN</a> 
+                
+            </p>
         </footer>
     </body>
 </html>
